renamed app.js to fizzBuzz.js

--- a/tests.html
+++ b/tests.html
@@ -11,6 +11,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/app.js"></script>
+  <script type="text/javascript" src="src/fizzBuzz.js"></script>
   <script type="text/javascript" src="src/rules.js"></script>
 
   <!-- include spec files here... -->
