--- a/test/unit.html
+++ b/test/unit.html
@@ -5,17 +5,17 @@
   <title>Jasmine Spec Runner</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="test/lib/jasmine-1.3.1/jasmine.css">
-  <script type="text/javascript" src="test/lib/jasmine-1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="test/lib/jasmine-1.3.1/jasmine-html.js"></script>
+  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+  <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
+  <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/app.js"></script>
-  <script type="text/javascript" src="src/fizzBuzz.js"></script>
-  <script type="text/javascript" src="src/rules.js"></script>
+  <script type="text/javascript" src="../src/app.js"></script>
+  <script type="text/javascript" src="../src/fizzBuzz.js"></script>
+  <script type="text/javascript" src="../src/rules.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="test/unit/specs.js"></script>
+  <script type="text/javascript" src="unit/specs.js"></script>
 
 
   <script type="text/javascript">
