separated specs.js in two spec files

--- a/test/unit.html
+++ b/test/unit.html
@@ -15,8 +15,8 @@
   <script type="text/javascript" src="../src/rules.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="unit/specs.js"></script>
-
+  <script type="text/javascript" src="unit/fizzBuzzSpecs.js"></script>
+  <script type="text/javascript" src="unit/sequenceSpecs.js"></script>
 
   <script type="text/javascript">
     (function() {
