--- a/test/unit.html
+++ b/test/unit.html
@@ -17,6 +17,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="unit/fizzBuzzSpecs.js"></script>
   <script type="text/javascript" src="unit/sequenceSpecs.js"></script>
+  <script type="text/javascript" src="unit/interactorSpecs.js"></script>
 
   <script type="text/javascript">
     (function() {
