--- a/test/unit.html
+++ b/test/unit.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="../lib/jquery.js"></script>
   <script type="text/javascript" src="../src/app.js"></script>
   <script type="text/javascript" src="../src/fizzBuzz.js"></script>
   <script type="text/javascript" src="../src/rules.js"></script>
@@ -18,6 +19,7 @@
   <script type="text/javascript" src="unit/fizzBuzzSpecs.js"></script>
   <script type="text/javascript" src="unit/sequenceSpecs.js"></script>
   <script type="text/javascript" src="unit/interactorSpecs.js"></script>
+  <script type="text/javascript" src="unit/widgetSpecs.js"></script>
 
   <script type="text/javascript">
     (function() {
