separated interactor, sequence and widget in differente files

--- a/test/unit.html
+++ b/test/unit.html
@@ -11,7 +11,9 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../lib/jquery.js"></script>
-  <script type="text/javascript" src="../src/app.js"></script>
+  <script type="text/javascript" src="../src/interactor.js"></script>
+  <script type="text/javascript" src="../src/widget.js"></script>
+  <script type="text/javascript" src="../src/sequence.js"></script>
   <script type="text/javascript" src="../src/fizzBuzz.js"></script>
   <script type="text/javascript" src="../src/rules.js"></script>
 
